# ColorCalc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ColorUtils/: CMakeLists.txt  ColorUtils.cpp  ColorUtils.h  color_difference.h
ColorUtils/Types/: HEX.cpp  HEX.h  LCh.cpp  LCh.h  Lab.cpp  Lab.h  RGB.cpp  RGB.h  XYZ.cpp  XYZ.h  conversions.cpp
ColorWidget/: ColorWidget.cpp  ColorWidget.h  ColorWidget.ui
MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
resources/: resources.qrc
